dhall/tests/type-inference/failure/unit/WithNotRecord.txt
Type error: error: MustCombineRecord
 --> <current file>:1:1
  |
1 | 5 with a = 10
  | ^^^^^^^^^^^^^ MustCombineRecord
  |
